force-app/main/default/objects/Engagement__c/fields/Allocation_Employee__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Employee__c</fullName>
    <label>% Allocation (Employee)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>