force-app/main/default/objects/Engagement__c/fields/Engagement_Number__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Number__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Engagement Number</label>
    <type>AutoNumber</type>
</CustomField>