force-app/main/default/objects/Engagement__c/fields/LCAT__c.field-meta.xml
<CustomField>
    <fullName>LCAT__c</fullName>
    <label>LCAT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>