force-app/main/default/objects/Engagement__c/fields/Previous_Roles__c.field-meta.xml
<CustomField>
    <fullName>Previous_Roles__c</fullName>
    <label>Previous Roles</label>
    <length>250</length>
    <type>Text</type>
</CustomField>