force-app/main/default/objects/Engagement__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagements (Supervisor)</relationshipLabel>
    <relationshipName>Engagements1</relationshipName>
    <type>Lookup</type>
</CustomField>